--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -26,6 +26,7 @@ h6 {
   font-weight: bold;
 }
 $chatblue: #d4d5d6;
+$bgblue: #2d3748;
 
 .chat-message {
   border: none;
@@ -59,6 +60,13 @@ $chatblue: #d4d5d6;
   height: 100%;
   resize: none;
   background: $chatblue;
+}
+
+.sheet.journal-entry .journal-entry-content{
+  background-image: unset;
+  border:none;
+  color: white;
+  background: $bgblue !important;
 }
 
 .window-app .window-content {
