--- a/src/templates/actors/cyberdeck-sheet.html
+++ b/src/templates/actors/cyberdeck-sheet.html
@@ -123,9 +123,9 @@
                value="{{hacker.name}}" readonly />
             {{#if hacker}}
             <a class="item-control mr-1 crew-roll text-gray-700 hover:text-purple-600 transition-colors"
-              title='{{localize ' swnr.sheet.roll-skill'}}'><i class="fas fa-dice"></i></a>
+              title='{{localize 'swnr.sheet.roll-skill'}}'><i class="fas fa-dice"></i></a>
             <a class="item-control mr-1 crew-delete text-gray-700 hover:text-red-600 transition-colors"
-              title='{{localize ' swnr.sheet.delete-item'}}'><i class="fas fa-trash"></i></a>
+              title='{{localize 'swnr.sheet.delete-item'}}'><i class="fas fa-trash"></i></a>
             {{/if}}
           </div>
           <label
@@ -133,6 +133,73 @@
             {{localize 'swnr.sheet.cyberdeck.hacker'}}
           </label>
         </div>
+
+        {{#if hacker}}
+        <div class="hackerhp flex flex-col justify-center items-center">
+          <div class="flex flexcol">
+              <!-- HP -->
+              <div class="hp flex flex-row justify-center items-center text-lg">
+                <label class="hp-label hover:text-shadow hover:text-shadow-blueGray-600 cursor-pointer transition-text-shadow"
+                    > {{localize 'swnr.sheet.hp'}}
+                </label>
+                <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md subfield">
+                  
+                  <span 
+                    class="inline-block text-right text-gray-300 cursor-not-allowed w-8 subfield"
+                  >{{hacker.data.data.health.value}}</span>
+                  <span>/</span>
+                  <span 
+                    class="inline-block text-left text-gray-300 cursor-not-allowed w-8 subfield"
+                  >{{hacker.data.data.health.max}}</span>
+                </div>
+              </div>
+              <!-- bar -->
+              <div class="flex gap-2 items-center">
+                <div
+                  class="bg-green-300 border border-green-900 w-full rounded-full h-4 overflow-hidden"
+                >
+                  <div
+                    class="bg-green-500 h-full rounded-full"
+                    style="width: min(calc(100% * {{hacker.data.data.health.value}}/{{hacker.data.data.health.max}}));"
+                  ></div>
+                </div>
+              </div>
+          </div>
+        </div>
+
+        <div class="hackeraccess flex flex-col justify-center items-center">
+          <div class="flex flexcol">
+              <!-- access -->
+              <div class="hp flex flex-row justify-center items-center text-lg">
+                <label class="hp-label hover:text-shadow hover:text-shadow-blueGray-600 cursor-pointer transition-text-shadow"
+                    > {{localize 'swnr.sheet.access'}}
+                </label>
+                <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md subfield">
+                  
+                  <span 
+                    class="inline-block text-right text-gray-300 cursor-not-allowed w-8 subfield"
+                  >{{hacker.data.data.access.value}}</span>
+                  <span>/</span>
+                  <span 
+                    class="inline-block text-left text-gray-300 cursor-not-allowed w-8 subfield"
+                  >{{hacker.data.data.access.max}}</span>
+                </div>
+              </div>
+              <!-- bar -->
+              <div class="flex gap-2 items-center">
+                <div
+                  class="bg-green-300 border border-green-900 w-full rounded-full h-4 overflow-hidden"
+                >
+                  <div
+                    class="bg-green-500 h-full rounded-full"
+                    style="width: min(calc(100% * {{hacker.data.data.access.value}}/{{hacker.data.data.access.max}}));"
+                  ></div>
+                </div>
+              </div>
+          </div> <!--access-->
+        </div>
+
+        {{/if}}
       </div><!-- header -->
     </div>
   </div>
