wip on deck sheet

--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -141,7 +141,9 @@ a:hover {
 .flavor-text {
   font-size: 12pt !important;;
 }
-
+.item-alternating{
+  @apply ml-2;
+}
 .item-entry
 {
   @apply  py-0.5 pb-2 ;
