--- a/src/templates/items/program-sheet.html
+++ b/src/templates/items/program-sheet.html
@@ -11,6 +11,7 @@
         </option>
         <option value="subject">{{localize 'swnr.sheet.program.subject'}}</option>
         <option value="datafile">{{localize 'swnr.sheet.program.datafile'}}</option>
+        <option value="running">{{localize 'swnr.sheet.program.running'}}</option>
         
         {{/select}}
       </select>
