--- a/src/templates/items/program-sheet.html
+++ b/src/templates/items/program-sheet.html
@@ -87,9 +87,9 @@
 
       <input
             class="w-32 px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
-            name="data.useAffect"
+            name="data.useAffects"
             min="0"
-            value="{{data.data.useAffect}}"
+            value="{{data.data.useAffects}}"
           />
     </div>
 
