--- a/src/templates/actors/cyberdeck-sheet.html
+++ b/src/templates/actors/cyberdeck-sheet.html
@@ -292,7 +292,7 @@
               <div><!-- running programs -->
                 <li class="item-titles flexrow">
                   <div class="item-name">Active Running Programs</div>
-                  <div class="item-status text-right">      
+                  <div class="item-status text-right">   
                     <a class="item-control activate-program text-gray-100 hover:text-green-400 transition-colors"
                     title="{{localize 'swnr.sheet.add-item'}}" data-item-type="program" data-item-name="Program">
                       <i class="fas fa-plus"></i>
@@ -313,9 +313,15 @@
                         <div class="item-image" style="background-image: url({{item.img}})">
                           <a></a>
                         </div>
-                        <a>{{item.name}}</a>
+                        <a>{{item.name}}</a> 
+                        {{#if item.data.data.useAffects}}
+                          [{{item.data.data.useAffects}}]
+                        {{/if}}
                       </div>
                       <div class="item-controls  text-right">
+                        <a class="item-control item-edit text-gray-400 hover:text-purple-800 transition-colors" 
+                          title='{{localize 'swnr.sheet.edit-item'}}'><i class="fas fa-edit"></i></a>
+          
                         <a class="item-control item-delete text-gray-400 hover:text-red-600 transition-colors" 
                           title='{{localize 'swnr.sheet.delete-item'}}'><i class="fas fa-trash"></i></a>
                       </div>
