adding bonus access

--- a/src/templates/actors/cyberdeck-sheet.html
+++ b/src/templates/actors/cyberdeck-sheet.html
@@ -258,11 +258,11 @@
                   
                   <span 
                     class="inline-block text-right text-gray-300 cursor-not-allowed w-8 subfield"
-                  >{{hacker.data.data.access.value}}</span>
+                  >{{access.value}}</span>
                   <span>/</span>
                   <span 
                     class="inline-block text-left text-gray-300 cursor-not-allowed w-8 subfield"
-                  >{{hacker.data.data.access.max}}</span>
+                  >{{access.max}}</span>
                 </div>
               </div>
               <!-- bar -->
